yml-files/Ingress/Ingress.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-django
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: ssl-ingress
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer 
    alb.ingress.kubernetes.io/healthcheck-path: '/health'   
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
    ## SSL Settings
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]' 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]' 
    # SSL Redirect Setting
    # alb.ingress.kubernetes.io/ssl-redirect: '443'      
spec:
  ingressClassName: aws-ingress-class   # Ingress Class                    
  tls:
  - hosts:
    - "app2.maxinehe.top"
  rules:
    - http:
        paths:      
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port: 
                  number: 80
    - http:
        paths:      
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port: 
                  number: 80
